Update azure-pipelines.yml for Azure Pipelines, correction

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,4 +32,4 @@ steps:
 - task: PublishPipelineArtifact@0
   inputs:
     artifactName: 'koiadist'
-    targetPath: '/dist/koia'
+    targetPath: 'dist/koia'
