--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "rxjs": "^6.5.2",
     "save": "^2.4.0",
     "save-svg-as-png": "^1.4.14",
+    "slick-carousel": "^1.8.1",
     "xlsx": "^0.14.3",
     "zone.js": "~0.9.1"
   },
