--- a/angular.json
+++ b/angular.json
@@ -17,6 +17,7 @@
             "tsConfig": "src/tsconfig.app.json",
             "polyfills": "src/polyfills.ts",
             "assets": [
+              "src/.htaccess",
               "src/assets",
               "src/assets/favicon.ico",
               "src/assets/*.png",
