--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,7 @@
               "node_modules/slick-carousel/slick/slick-theme.scss",
               "node_modules/c3/c3.min.css",
               "node_modules/pivottable/dist/pivot.css",              
-              "src/themes/koia-theme.scss",
+              "src/assets/themes/koia-theme.scss",
               "src/styles.css"              
             ],
             "stylePreprocessorOptions": {
