--- a/src/web.config
+++ b/src/web.config
@@ -1,5 +1,6 @@
 <configuration>
     <system.webServer>
+         <staticContent><mimeMap fileExtension=".json" mimeType="application/json" /></staticContent>
          <rewrite>
             <rules>
               <rule name="AngularJS Routes" stopProcessing="true">
