trying to solve HTTP 404 on Azure

--- a/src/web.config
+++ b/src/web.config
@@ -1,22 +1,17 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <configuration>
-    <system.webServer>
-         <staticContent><mimeMap fileExtension=".json" mimeType="application/json" /></staticContent>
-         <rewrite>
-            <rules>
-              <rule name="AngularJS Routes" stopProcessing="true">
-                <match url=".*" />
-                <conditions logicalGrouping="MatchAll">
-                  <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-                  <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-                </conditions>
-                <action type="Rewrite" url="/" />
-              </rule>
-            </rules>
-          </rewrite>
-          <caching enabled="true" enableKernelCache="true">
-              <profiles>
-                  <add extension=".js" policy="DisableCache" kernelCachePolicy="DisableCache" />
-              </profiles>
-          </caching>
-    </system.webServer>
+  <system.webServer>
+    <rewrite>
+      <rules>
+        <rule name="Angular8" stopProcessing="true">
+          <match url=".*" />
+          <conditions logicalGrouping="MatchAll">
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+          </conditions>
+          <action type="Rewrite" url="/" />
+        </rule>
+      </rules>
+    </rewrite>
+  </system.webServer>
 </configuration>
