improved handling for displaying raw data of pivot table cells

--- a/src/web.config
+++ b/src/web.config
@@ -3,7 +3,7 @@
   <system.webServer>
     <rewrite>
       <rules>
-        <rule name="Angular8" stopProcessing="true">
+        <rule name="Angular" stopProcessing="true">
           <match url=".*" />
           <conditions logicalGrouping="MatchAll">
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
