--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,7 +41,7 @@ steps:
     targetType: 'inline'
     script: |
       New-Item -Type Directory -Force "${HOME}/couchdb/etc/local.d"
-      Copy-Item -Force "$(couchdb_local_ini.secureFilePath)" "${HOME}/couchdb/local.d/etc/local.ini"    
+      Copy-Item -Force "$(couchdb_local_ini.secureFilePath)" "${HOME}/couchdb/etc/local.d/local.ini"    
 
 - task: DockerInstaller@0
   displayName: Install Docker
