--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-junit-reporter": "^2.0.1",
     "karma-spec-reporter": "0.0.32",
     "ng-packagr": "^5.2.0",
     "protractor": "^5.4.2",
