--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,7 +50,7 @@ steps:
     releaseType: stable
     
 - script: |
-    docker run -p 5984:5984 --name couchdb -v ${HOME}/couchdb/etc/local.d -d couchdb
+    docker run -p 5984:5984 --name couchdb -v ${HOME}/couchdb/etc/local.d:/opt/couchdb/etc/local.d -d couchdb
 #    docker run -e COUCHDB_USER=admin -e COUCHDB_PASSWORD=admin -p 5984:5984 --name couchdb -v ${HOME}/couchdb/local.d -d couchdb
   displayName: 'run couchdb Docker image'
 
