--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,17 +24,17 @@ steps:
 - script: |
     npm ci -g @angular/cli
     npm ci
-  displayName: 'Install npm packages'
+  displayName: 'install npm packages'
 
 # set-up and rund CouchDB in Docker container (used by unit tests)
 - task: DownloadSecureFile@1
-  displayName: 'Download couchdb local.ini file'
+  displayName: 'cownload couchdb local.ini file'
   name: couchdb_local_ini
   inputs:
     secureFile: 'couchdb_local.ini'    
 
 - task: PowerShell@2
-  displayName: 'Copy couchdb local.ini to $HOME/couchdb/etc/local.d'
+  displayName: 'copy couchdb local.ini to target directory'
   inputs:
     targetType: 'inline'
     script: |
@@ -42,7 +42,7 @@ steps:
       Copy-Item -Force "$(couchdb_local_ini.secureFilePath)" "${HOME}/couchdb/etc/local.d/local.ini"    
 
 - task: DockerInstaller@0
-  displayName: Install Docker
+  displayName: install Docker
   inputs:
     dockerVersion: 17.09.0-ce
     releaseType: stable
@@ -51,9 +51,9 @@ steps:
     docker run -p 5984:5984 --name couchdb -v ${HOME}/couchdb/etc/local.d:/opt/couchdb/etc/local.d -d couchdb
   displayName: 'run CouchDb in Docker container'
 
-# perform and publish unit-tets
+# perform unit-tets and publish test and code coverage results
 - script: |
-    npx ng test --watch=false --karmaConfig karma.conf.ci.js
+    npx ng test --watch=false --karmaConfig karma.conf.ci.js --code-coverage
   displayName: 'perform unit tests'    
 
 - task: PublishTestResults@2
@@ -63,9 +63,19 @@ steps:
     testResultsFiles: '**/TESTS-*.xml'
   displayName: 'publish unit test results'
 
+- task: PublishCodeCoverageResults@1
+  displayName: 'publish code coverage results'
+  condition: succeededOrFailed()
+  inputs:
+    codeCoverageTool: Cobertura
+    summaryFileLocation: 'src/coverage/cobertura-coverage.xml'
+    reportDirectory: src/coverage
+    failIfCoverageEmpty: true  
+
 # build product and publish artifact
 - script: |
     npx ng build --prod
+  failOnStderr: true    
   displayName: 'build koia product'
 
 - task: PublishPipelineArtifact@0
