--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,12 +14,12 @@ steps:
   inputs:
     key: npm | $(Agent.OS) | package-lock.json
     path: $(npm_config_cache)
-  displayName: Cache npm packages
+  displayName: cache npm packages
 
 - task: NodeTool@0
   inputs:
     versionSpec: '10.x'
-  displayName: 'Install Node.js'
+  displayName: 'install Node.js'
 
 - script: |
     npm ci -g @angular/cli
@@ -68,8 +68,7 @@ steps:
   condition: succeededOrFailed()
   inputs:
     codeCoverageTool: Cobertura
-    summaryFileLocation: 'src/coverage/cobertura-coverage.xml'
-    reportDirectory: src/coverage
+    summaryFileLocation: '$(Build.SourcesDirectory)/coverage/cobertura-coverage.xml'
     failIfCoverageEmpty: true  
 
 # build product and publish artifact
