--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "ng test --code-coverage=true",
     "test-debug": "ng test --browsers=ChromeDebug",
     "test-headless": "ng test --watch=true --poll=1000 --sourceMap=true --browsers=ChromeHeadless",
-    "e2e": "npm run build:prod && mocha --timeout 300000 --require ts-node/register e2e/**/*.spec.ts"
+    "e2e": "ng e2e --webdriver-update=false --devServerTarget=''"
   },
   "private": true,
   "dependencies": {
@@ -69,13 +69,15 @@
     "@angular/cli": "^8.3.18",
     "@angular/compiler-cli": "^8.2.13",
     "@types/jasmine": "2.5.38",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "^6.14.4",
     "codelyzer": "^5.2.0",
     "copyfiles": "^2.1.1",
     "cross-var": "^1.1.0",
     "jasmine": "^2.99.0",
     "jasmine-core": "^2.99.1",
-    "jasmine-spec-reporter": "~3.2.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "jasminewd2": "^2.2.0",
     "karma": "^3.1.4",
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
