--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ steps:
   displayName: 'install Node.js'
 
 - script: |
-    npm ci -g @angular/cli
+    npm ci -g @angular/cli@8.3.21
     npm ci
   displayName: 'install npm packages'
 
