--- a/package.json
+++ b/package.json
@@ -93,6 +93,6 @@
     "tsickle": "^0.37.1",
     "tslib": "^1.10.0",
     "tslint": "~5.7.0",
-    "typescript": "^3.5.3"
+    "typescript": "~3.5.3"
   }
 }
