--- a/package.json
+++ b/package.json
@@ -16,28 +16,29 @@
     "test": "ng test --code-coverage=true",
     "test-debug": "ng test --browsers=ChromeDebug",
     "test-headless": "ng test --watch=true --poll=1000 --sourceMap=true --browsers=ChromeHeadless",
-    "e2e": "ng e2e --webdriver-update=false --devServerTarget=''"
+    "e2e": "ng e2e --webdriver-update=false --devServerTarget=''",
+    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.14",
+    "@angular/animations": "^9.0.0-rc.14",
     "@angular/cdk": "^8.2.3",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
+    "@angular/common": "^9.0.0-rc.14",
+    "@angular/compiler": "^9.0.0-rc.14",
+    "@angular/core": "^9.0.0-rc.14",
     "@angular/flex-layout": "^8.0.0-beta.27",
-    "@angular/forms": "^8.2.14",
+    "@angular/forms": "^9.0.0-rc.14",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/platform-server": "^8.2.14",
-    "@angular/router": "^8.2.14",
+    "@angular/platform-browser": "^9.0.0-rc.14",
+    "@angular/platform-browser-dynamic": "^9.0.0-rc.14",
+    "@angular/platform-server": "^9.0.0-rc.14",
+    "@angular/router": "^9.0.0-rc.14",
     "@types/file-saver": "^2.0.0",
     "@types/pouchdb": "^6.4.0",
-    "angular-resizable-element": "^3.2.6",
+    "angular-resizable-element": "^3.3.0",
     "c3": "^0.4.24",
     "chart.js": "^2.9.3",
-    "core-js": "^3.6.2",
+    "core-js": "^3.6.4",
     "d3": "^3.5.17",
     "d3fc-sample": "^3.0.5",
     "data-forge": "^1.7.7",
@@ -58,20 +59,21 @@
     "pouchdb-find": "^7.1.1",
     "rxjs": "^6.5.3",
     "save": "^2.4.0",
-    "save-svg-as-png": "^1.4.14",
-    "xlsx": "^0.15.4",
-    "zone.js": "~0.9.1"
+    "save-svg-as-png": "^1.4.17",
+    "tslib": "^1.10.0",
+    "xlsx": "^0.15.5",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.24",
-    "@angular-devkit/build-ng-packagr": "^0.803.24",
-    "@angular/cli": "^8.3.24",
-    "@angular/compiler-cli": "^8.2.14",
+    "@angular-devkit/build-angular": "~0.900.0-rc.12",
+    "@angular-devkit/build-ng-packagr": "~0.900.0-rc.12",
+    "@angular/cli": "^9.0.0-rc.12",
+    "@angular/compiler-cli": "^9.0.0-rc.14",
     "@types/jasmine": "2.5.38",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^6.14.9",
-    "codelyzer": "^5.2.1",
-    "copyfiles": "^2.1.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
+    "copyfiles": "^2.2.0",
     "cross-var": "^1.1.0",
     "jasmine": "^2.99.0",
     "jasmine-core": "^2.99.1",
@@ -85,14 +87,12 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-junit-reporter": "^2.0.1",
     "karma-spec-reporter": "0.0.32",
-    "ng-packagr": "^5.7.1",
-    "protractor": "^5.4.2",
-    "puppeteer": "^2.0.0",
+    "ng-packagr": "^9.0.0-rc.7",
+    "protractor": "^5.4.3",
+    "puppeteer": "^2.1.0",
     "rxjs-tslint": "^0.1.7",
     "ts-node": "^4.1.0",
-    "tsickle": "^0.37.1",
-    "tslib": "^1.10.0",
     "tslint": "~5.7.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.7.5"
   }
 }
