--- a/package.json
+++ b/package.json
@@ -69,25 +69,25 @@
     "@angular-devkit/build-ng-packagr": "~0.900.0-rc.12",
     "@angular/cli": "^9.0.0-rc.12",
     "@angular/compiler-cli": "^9.0.0-rc.14",
-    "@types/jasmine": "2.5.38",
+    "@types/jasmine": "^3.5.2",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "copyfiles": "^2.2.0",
     "cross-var": "^1.1.0",
-    "jasmine": "^2.99.0",
-    "jasmine-core": "^2.99.1",
+    "jasmine": "^3.5.0",
+    "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "^4.2.1",
     "jasminewd2": "^2.2.0",
-    "karma": "^3.1.4",
-    "karma-chrome-launcher": "~2.0.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
-    "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-cli": "^2.0.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
+    "karma-jasmine": "^3.1.0",
+    "karma-jasmine-html-reporter": "^1.5.2",
     "karma-junit-reporter": "^2.0.1",
     "karma-spec-reporter": "0.0.32",
-    "ng-packagr": "^9.0.0-rc.7",
+    "ng-packagr": "^9.0.0-rc.8",
     "protractor": "^5.4.3",
     "puppeteer": "^2.1.0",
     "rxjs-tslint": "^0.1.7",
