--- a/package.json
+++ b/package.json
@@ -21,18 +21,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.0-rc.14",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "^9.0.0-rc.14",
-    "@angular/compiler": "^9.0.0-rc.14",
-    "@angular/core": "^9.0.0-rc.14",
-    "@angular/flex-layout": "^8.0.0-beta.27",
-    "@angular/forms": "^9.0.0-rc.14",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "^9.0.0-rc.14",
-    "@angular/platform-browser-dynamic": "^9.0.0-rc.14",
-    "@angular/platform-server": "^9.0.0-rc.14",
-    "@angular/router": "^9.0.0-rc.14",
+    "@angular/animations": "^9.0.1",
+    "@angular/cdk": "^9.0.0",
+    "@angular/common": "^9.0.1",
+    "@angular/compiler": "^9.0.1",
+    "@angular/core": "^9.0.1",
+    "@angular/flex-layout": "^9.0.0-beta.29",
+    "@angular/forms": "^9.0.1",
+    "@angular/material": "^9.0.0",
+    "@angular/platform-browser": "^9.0.1",
+    "@angular/platform-browser-dynamic": "^9.0.1",
+    "@angular/platform-server": "^9.0.1",
+    "@angular/router": "^9.0.1",
     "@types/file-saver": "^2.0.0",
     "@types/pouchdb": "^6.4.0",
     "angular-resizable-element": "^3.3.0",
@@ -53,10 +53,10 @@
     "ng5-slider": "^1.2.4",
     "nvd3": "^1.8.6",
     "oboe": "^2.1.5",
-    "papaparse": "^4.6.3",
+    "papaparse": "^5.1.1",
     "pivottable": "^2.23.0",
-    "pouchdb": "^7.1.1",
-    "pouchdb-find": "^7.1.1",
+    "pouchdb": "^7.2.1",
+    "pouchdb-find": "^7.2.1",
     "rxjs": "^6.5.3",
     "save": "^2.4.0",
     "save-svg-as-png": "^1.4.17",
@@ -65,13 +65,13 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.0-rc.12",
-    "@angular-devkit/build-ng-packagr": "~0.900.0-rc.12",
-    "@angular/cli": "^9.0.0-rc.12",
-    "@angular/compiler-cli": "^9.0.0-rc.14",
-    "@types/jasmine": "^3.5.3",
+    "@angular-devkit/build-angular": "~0.900.2",
+    "@angular-devkit/build-ng-packagr": "~0.900.2",
+    "@angular/cli": "^9.0.2",
+    "@angular/compiler-cli": "^9.0.1",
+    "@types/jasmine": "^3.5.4",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^13.7.0",
+    "@types/node": "^13.7.1",
     "codelyzer": "^5.1.2",
     "copyfiles": "^2.2.0",
     "cross-var": "^1.1.0",
@@ -83,16 +83,16 @@
     "karma-chrome-launcher": "^3.1.0",
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "^3.1.0",
+    "karma-jasmine": "^3.1.1",
     "karma-jasmine-html-reporter": "^1.5.2",
     "karma-junit-reporter": "^2.0.1",
     "karma-spec-reporter": "0.0.32",
-    "ng-packagr": "^9.0.0-rc.8",
+    "ng-packagr": "^9.0.0",
     "protractor": "^5.4.3",
-    "puppeteer": "^2.1.0",
+    "puppeteer": "^2.1.1",
     "rxjs-tslint": "^0.1.7",
-    "ts-node": "^4.1.0",
-    "tslint": "~5.7.0",
+    "ts-node": "^8.6.2",
+    "tslint": "^6.0.0",
     "typescript": "~3.7.5"
   }
 }
