--- a/package.json
+++ b/package.json
@@ -22,77 +22,77 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^9.1.11",
-    "@angular/cdk": "^9.0.0",
+    "@angular/cdk": "^9.2.0",
     "@angular/common": "^9.1.11",
     "@angular/compiler": "^9.1.11",
     "@angular/core": "^9.1.11",
-    "@angular/flex-layout": "^9.0.0-beta.29",
+    "@angular/flex-layout": "^9.0.0-beta.31",
     "@angular/forms": "^9.1.11",
-    "@angular/material": "^9.0.0",
+    "@angular/material": "^9.2.0",
     "@angular/platform-browser": "^9.1.11",
     "@angular/platform-browser-dynamic": "^9.1.11",
     "@angular/platform-server": "^9.1.11",
     "@angular/router": "^9.1.11",
     "@types/file-saver": "^2.0.0",
     "@types/pouchdb": "^6.4.0",
-    "angular-resizable-element": "^3.3.0",
+    "angular-resizable-element": "^3.3.2",
     "c3": "^0.4.24",
     "chart.js": "^2.9.3",
-    "core-js": "^3.6.4",
+    "core-js": "^3.6.5",
     "d3": "^3.5.17",
     "d3fc-sample": "^3.0.5",
-    "data-forge": "^1.7.7",
-    "extract-zip": "^1.6.7",
+    "data-forge": "^1.8.9",
+    "extract-zip": "^2.0.1",
     "file-saver": "^2.0.1",
     "hammerjs": "^2.0.8",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "jquery-ui-dist": "^1.12.1",
-    "moment": "^2.24.0",
-    "ng2-charts": "^2.3.0",
+    "moment": "^2.26.0",
+    "ng2-charts": "^2.3.2",
     "ng2-nvd3": "^2.0.0",
     "ng5-slider": "^1.2.4",
+    "npm": "^6.14.4",
     "nvd3": "^1.8.6",
     "oboe": "^2.1.5",
-    "papaparse": "^5.1.1",
+    "papaparse": "^5.2.0",
     "pivottable": "^2.23.0",
     "pouchdb": "^7.2.1",
     "pouchdb-find": "^7.2.1",
-    "rxjs": "^6.5.3",
+    "rxjs": "^6.5.5",
     "save": "^2.4.0",
     "save-svg-as-png": "^1.4.17",
     "tslib": "^1.10.0",
-    "xlsx": "^0.15.5",
-    "zone.js": "~0.10.2"
+    "xlsx": "^0.16.2",
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.8",
     "@angular-devkit/build-ng-packagr": "~0.901.8",
     "@angular/cli": "^9.1.8",
     "@angular/compiler-cli": "^9.1.11",
-    "@types/jasmine": "^3.5.4",
+    "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^13.7.1",
-    "codelyzer": "^5.1.2",
-    "copyfiles": "^2.2.0",
+    "@types/node": "^14.0.13",
+    "codelyzer": "^5.2.2",
+    "copyfiles": "^2.3.0",
     "cross-var": "^1.1.0",
     "jasmine": "^3.5.0",
     "jasmine-core": "^3.5.0",
-    "jasmine-spec-reporter": "^4.2.1",
+    "jasmine-spec-reporter": "^5.0.2",
     "jasminewd2": "^2.2.0",
-    "karma": "^4.4.1",
+    "karma": "^5.1.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-cli": "^2.0.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "^3.1.1",
-    "karma-jasmine-html-reporter": "^1.5.2",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^3.3.1",
+    "karma-jasmine-html-reporter": "^1.5.3",
     "karma-junit-reporter": "^2.0.1",
     "karma-spec-reporter": "0.0.32",
-    "ng-packagr": "^9.0.0",
-    "protractor": "^5.4.3",
-    "puppeteer": "^2.1.1",
-    "rxjs-tslint": "^0.1.7",
-    "ts-node": "^8.6.2",
-    "tslint": "^6.0.0",
-    "typescript": "~3.7.5"
+    "ng-packagr": "^9.1.0",
+    "protractor": "^7.0.0",
+    "puppeteer": "^3.3.0",
+    "ts-node": "^8.8.1",
+    "tslint": "^6.1.1",
+    "typescript": "^3.8.3"
   }
 }
