--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^9.1.11",
-    "@angular/cdk": "^9.2.0",
+    "@angular/cdk": "^9.1.11",
     "@angular/common": "^9.1.11",
     "@angular/compiler": "^9.1.11",
     "@angular/core": "^9.1.11",
     "@angular/flex-layout": "^9.0.0-beta.31",
     "@angular/forms": "^9.1.11",
-    "@angular/material": "^9.2.0",
+    "@angular/material": "^9.1.0",
     "@angular/platform-browser": "^9.1.11",
     "@angular/platform-browser-dynamic": "^9.1.11",
     "@angular/platform-server": "^9.1.11",
@@ -41,7 +41,7 @@
     "core-js": "^3.6.5",
     "d3": "^3.5.17",
     "d3fc-sample": "^3.0.5",
-    "data-forge": "^1.8.9",
+    "data-forge": "^1.8.10",
     "extract-zip": "^2.0.1",
     "file-saver": "^2.0.1",
     "hammerjs": "^2.0.8",
@@ -51,7 +51,7 @@
     "ng2-charts": "^2.3.2",
     "ng2-nvd3": "^2.0.0",
     "ng5-slider": "^1.2.4",
-    "npm": "^6.14.4",
+    "npm": "^6.14.7",
     "nvd3": "^1.8.6",
     "oboe": "^2.1.5",
     "papaparse": "^5.2.0",
@@ -66,7 +66,7 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.8",
+    "@angular-devkit/build-angular": "^0.1000.6",
     "@angular-devkit/build-ng-packagr": "~0.901.8",
     "@angular/cli": "^9.1.8",
     "@angular/compiler-cli": "^9.1.11",
