--- a/package.json
+++ b/package.json
@@ -21,18 +21,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.11",
+    "@angular/animations": "^10.0.9",
     "@angular/cdk": "^9.1.11",
-    "@angular/common": "^9.1.11",
-    "@angular/compiler": "^9.1.11",
-    "@angular/core": "^9.1.11",
+    "@angular/common": "^10.0.9",
+    "@angular/compiler": "^10.0.9",
+    "@angular/core": "^10.0.9",
     "@angular/flex-layout": "^10.0.0-beta.32",
-    "@angular/forms": "^9.1.11",
+    "@angular/forms": "^10.0.9",
     "@angular/material": "^9.1.0",
-    "@angular/platform-browser": "^9.1.11",
-    "@angular/platform-browser-dynamic": "^9.1.11",
-    "@angular/platform-server": "^9.1.11",
-    "@angular/router": "^9.1.11",
+    "@angular/platform-browser": "^10.0.9",
+    "@angular/platform-browser-dynamic": "^10.0.9",
+    "@angular/platform-server": "^10.0.9",
+    "@angular/router": "^10.0.9",
     "@types/file-saver": "^2.0.0",
     "@types/pouchdb": "^6.4.0",
     "angular-resizable-element": "^3.3.2",
@@ -61,38 +61,38 @@
     "rxjs": "^6.5.5",
     "save": "^2.4.0",
     "save-svg-as-png": "^1.4.17",
-    "tslib": "^1.10.0",
+    "tslib": "^2.0.0",
     "xlsx": "^0.16.2",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1000.6",
-    "@angular-devkit/build-ng-packagr": "~0.901.8",
-    "@angular/cli": "^9.1.8",
-    "@angular/compiler-cli": "^9.1.11",
+    "@angular-devkit/build-ng-packagr": "~0.1000.6",
+    "@angular/cli": "^10.0.6",
+    "@angular/compiler-cli": "^10.0.9",
     "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^14.0.13",
-    "codelyzer": "^5.2.2",
+    "codelyzer": "^6.0.0",
     "copyfiles": "^2.3.0",
     "cross-var": "^1.1.0",
     "jasmine": "^3.5.0",
-    "jasmine-core": "^3.5.0",
-    "jasmine-spec-reporter": "^5.0.2",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
     "jasminewd2": "^2.2.0",
-    "karma": "^5.1.0",
-    "karma-chrome-launcher": "^3.1.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "^2.0.0",
-    "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-jasmine": "^3.3.1",
-    "karma-jasmine-html-reporter": "^1.5.3",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~3.3.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "karma-junit-reporter": "^2.0.1",
     "karma-spec-reporter": "0.0.32",
-    "ng-packagr": "^9.1.0",
-    "protractor": "^7.0.0",
+    "ng-packagr": "^10.0.0",
+    "protractor": "~7.0.0",
     "puppeteer": "^3.3.0",
     "ts-node": "^8.8.1",
-    "tslint": "^6.1.1",
-    "typescript": "^3.8.3"
+    "tslint": "~6.1.0",
+    "typescript": "^3.9.7"
   }
 }
