--- a/package.json
+++ b/package.json
@@ -22,20 +22,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^10.0.9",
-    "@angular/cdk": "^9.1.11",
+    "@angular/cdk": "^10.1.3",
     "@angular/common": "^10.0.9",
     "@angular/compiler": "^10.0.9",
     "@angular/core": "^10.0.9",
     "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "^10.0.9",
-    "@angular/material": "^9.1.0",
+    "@angular/material": "^10.1.3",
     "@angular/platform-browser": "^10.0.9",
     "@angular/platform-browser-dynamic": "^10.0.9",
     "@angular/platform-server": "^10.0.9",
     "@angular/router": "^10.0.9",
     "@types/file-saver": "^2.0.0",
     "@types/pouchdb": "^6.4.0",
-    "angular-resizable-element": "^3.3.2",
+    "angular-resizable-element": "^3.3.3",
     "c3": "^0.4.24",
     "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
@@ -48,7 +48,7 @@
     "jquery": "^3.5.1",
     "jquery-ui-dist": "^1.12.1",
     "moment": "^2.26.0",
-    "ng2-charts": "^2.3.2",
+    "ng2-charts": "^2.3.3",
     "ng2-nvd3": "^2.0.0",
     "ng5-slider": "^1.2.4",
     "npm": "^6.14.7",
@@ -56,13 +56,13 @@
     "oboe": "^2.1.5",
     "papaparse": "^5.2.0",
     "pivottable": "^2.23.0",
-    "pouchdb": "^7.2.1",
-    "pouchdb-find": "^7.2.1",
-    "rxjs": "^6.5.5",
+    "pouchdb": "^7.2.2",
+    "pouchdb-find": "^7.2.2",
+    "rxjs": "^6.6.2",
     "save": "^2.4.0",
     "save-svg-as-png": "^1.4.17",
     "tslib": "^2.0.0",
-    "xlsx": "^0.16.2",
+    "xlsx": "^0.16.6",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
@@ -70,17 +70,17 @@
     "@angular-devkit/build-ng-packagr": "~0.1000.6",
     "@angular/cli": "^10.0.6",
     "@angular/compiler-cli": "^10.0.9",
-    "@types/jasmine": "^3.5.10",
+    "@types/jasmine": "^3.5.12",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^14.0.13",
+    "@types/node": "^14.0.27",
     "codelyzer": "^6.0.0",
     "copyfiles": "^2.3.0",
     "cross-var": "^1.1.0",
-    "jasmine": "^3.5.0",
+    "jasmine": "^3.6.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "jasminewd2": "^2.2.0",
-    "karma": "~5.0.0",
+    "karma": "^5.1.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
@@ -92,7 +92,7 @@
     "protractor": "~7.0.0",
     "puppeteer": "^3.3.0",
     "ts-node": "^8.8.1",
-    "tslint": "~6.1.0",
+    "tslint": "^6.1.3",
     "typescript": "^3.9.7"
   }
 }
