updating ng CLI version

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ steps:
   displayName: 'install Node.js'
 
 - script: |
-    npm ci -g @angular/cli@9.0.0-rc.12
+    npm ci -g @angular/cli@10.0.6
     npm ci
   displayName: 'install npm packages'
 
