--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,6 +3,7 @@ trigger:
 
 variables:
   npm_config_cache: $(Pipeline.Workspace)/.npm
+  NODE_OPTIONS: --max_old_space_size=4096
 
 pool:
   vmImage: 'ubuntu-latest'
@@ -22,7 +23,7 @@ steps:
   displayName: 'install Node.js'
 
 - script: |
-    npm ci -g @angular/cli@10.0.7
+    npm ci -g @angular/cli@10.1.0
     npm ci
   displayName: 'install npm packages'
 
