--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ steps:
   displayName: 'install Node.js'
 
 - script: |
-    npm ci -g @angular/cli@10.1.0
+    npm ci -g @angular/cli@10.1.5
     npm ci
   displayName: 'install npm packages'
 
@@ -49,7 +49,7 @@ steps:
     releaseType: stable
     
 - script: |
-    docker run -p 5984:5984 --name couchdb -v ${HOME}/couchdb/etc/local.d:/opt/couchdb/etc/local.d -d couchdb
+    docker run -p 5984:5984 --name couchdb -v ${HOME}/couchdb/etc/local.d:/opt/couchdb/etc/local.d -d couchdb:2.3.1
   displayName: 'run CouchDB in Docker container'
 
 # perform unit-tets and publish test and code coverage results
