updating npm packages

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/platform-browser-dynamic": "^10.1.5",
     "@angular/platform-server": "^10.1.5",
     "@angular/router": "^10.1.5",
+    "@angular-slider/ngx-slider": "^2.0.3",
     "@types/file-saver": "^2.0.0",
     "@types/pouchdb": "^6.4.0",
     "angular-resizable-element": "^3.3.3",
@@ -41,16 +42,15 @@
     "core-js": "^3.6.5",
     "d3": "^3.5.17",
     "d3fc-sample": "^3.0.5",
-    "data-forge": "^1.8.11",
+    "data-forge": "^1.8.12",
     "extract-zip": "^2.0.1",
-    "file-saver": "^2.0.1",
+    "file-saver": "^2.0.5",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "jquery-ui-dist": "^1.12.1",
     "moment": "^2.26.0",
     "ng2-charts": "^2.3.3",
     "ng2-nvd3": "^2.0.0",
-    "ng5-slider": "^1.2.4",
     "npm": "^6.14.8",
     "nvd3": "^1.8.6",
     "oboe": "^2.1.5",
@@ -58,15 +58,15 @@
     "pivottable": "^2.23.0",
     "pouchdb": "^7.2.2",
     "pouchdb-find": "^7.2.2",
-    "rxjs": "^6.6.2",
+    "rxjs": "^6.6.3",
     "save": "^2.4.0",
     "save-svg-as-png": "^1.4.17",
     "tslib": "^2.0.0",
-    "xlsx": "^0.16.8",
+    "xlsx": "^0.16.9",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1001.6",
+    "@angular-devkit/build-angular": "^0.1100.5",
     "@angular-devkit/build-ng-packagr": "~0.1001.6",
     "@angular/cli": "^10.1.6",
     "@angular/compiler-cli": "^10.1.5",
@@ -76,14 +76,14 @@
     "codelyzer": "^6.0.0",
     "copyfiles": "^2.3.0",
     "cross-var": "^1.1.0",
-    "jasmine": "^3.6.1",
-    "jasmine-core": "~3.5.0",
+    "jasmine": "^3.6.3",
+    "jasmine-core": "^3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "jasminewd2": "^2.2.0",
-    "karma": "^5.2.1",
+    "karma": "^5.2.3",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "^2.0.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-coverage": "^2.0.3",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "karma-junit-reporter": "^2.0.1",
