--- a/package.json
+++ b/package.json
@@ -21,18 +21,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.1.5",
+    "@angular/animations": "^11.0.5",
     "@angular/cdk": "^10.2.4",
-    "@angular/common": "^10.1.5",
-    "@angular/compiler": "^10.1.5",
-    "@angular/core": "^10.1.5",
+    "@angular/common": "^11.0.5",
+    "@angular/compiler": "^11.0.5",
+    "@angular/core": "^11.0.5",
     "@angular/flex-layout": "^10.0.0-beta.32",
-    "@angular/forms": "^10.1.5",
+    "@angular/forms": "^11.0.5",
     "@angular/material": "^10.2.4",
-    "@angular/platform-browser": "^10.1.5",
-    "@angular/platform-browser-dynamic": "^10.1.5",
-    "@angular/platform-server": "^10.1.5",
-    "@angular/router": "^10.1.5",
+    "@angular/platform-browser": "^11.0.5",
+    "@angular/platform-browser-dynamic": "^11.0.5",
+    "@angular/platform-server": "^11.0.5",
+    "@angular/router": "^11.0.5",
     "@angular-slider/ngx-slider": "^2.0.3",
     "@types/file-saver": "^2.0.0",
     "@types/pouchdb": "^6.4.0",
@@ -67,32 +67,31 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1100.5",
-    "@angular-devkit/build-ng-packagr": "^0.1001.7",
-    "@angular/cli": "^10.1.6",
-    "@angular/compiler-cli": "^10.1.5",
-    "@types/jasmine": "^3.5.14",
+    "@angular/cli": "^11.0.5",
+    "@angular/compiler-cli": "^11.0.5",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^14.11.8",
     "codelyzer": "^6.0.0",
     "copyfiles": "^2.3.0",
     "cross-var": "^1.1.0",
     "jasmine": "^3.6.3",
-    "jasmine-core": "^3.6.0",
+    "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "jasminewd2": "^2.2.0",
     "karma": "^5.2.3",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "^2.0.0",
-    "karma-coverage": "^2.0.3",
-    "karma-jasmine": "~3.3.0",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "karma-junit-reporter": "^2.0.1",
     "karma-spec-reporter": "0.0.32",
-    "ng-packagr": "^10.0.0",
+    "ng-packagr": "^11.0.3",
     "protractor": "~7.0.0",
     "puppeteer": "^3.3.0",
     "ts-node": "^8.8.1",
     "tslint": "^6.1.3",
-    "typescript": "^3.9.7"
+    "typescript": "^4.0.5"
   }
 }
