--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "angular-resizable-element": "^3.3.3",
     "c3": "^0.4.24",
     "chart.js": "^2.9.3",
-    "core-js": "^3.6.5",
+    "core-js": "^3.8.1",
     "d3": "^3.5.17",
     "d3fc-sample": "^3.0.5",
     "data-forge": "^1.8.12",
@@ -47,10 +47,10 @@
     "file-saver": "^2.0.5",
     "jquery": "^3.5.1",
     "jquery-ui-dist": "^1.12.1",
-    "moment": "^2.26.0",
-    "ng2-charts": "^2.3.3",
+    "moment": "^2.29.1",
+    "ng2-charts": "^2.4.2",
     "ng2-nvd3": "^2.0.0",
-    "npm": "^6.14.8",
+    "npm": "^6.14.10",
     "nvd3": "^1.8.6",
     "oboe": "^2.1.5",
     "papaparse": "^5.3.0",
@@ -62,7 +62,7 @@
     "save-svg-as-png": "^1.4.17",
     "tslib": "^2.0.0",
     "xlsx": "^0.16.9",
-    "zone.js": "^0.10.3"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1100.5",
@@ -70,13 +70,13 @@
     "@angular/compiler-cli": "^11.0.5",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^14.11.8",
-    "codelyzer": "^6.0.0",
-    "copyfiles": "^2.3.0",
+    "@types/node": "^14.14.16",
+    "codelyzer": "^6.0.1",
+    "copyfiles": "^2.4.1",
     "cross-var": "^1.1.0",
     "jasmine": "^3.6.3",
     "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "jasmine-spec-reporter": "^6.0.0",
     "jasminewd2": "^2.2.0",
     "karma": "^5.2.3",
     "karma-chrome-launcher": "~3.1.0",
@@ -89,7 +89,7 @@
     "ng-packagr": "^11.0.3",
     "protractor": "~7.0.0",
     "puppeteer": "^3.3.0",
-    "ts-node": "^8.8.1",
+    "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
     "typescript": "^4.0.5"
   }
