--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,7 +70,7 @@ steps:
   inputs:
     codeCoverageTool: Cobertura
     summaryFileLocation: '$(Build.SourcesDirectory)/coverage/cobertura-coverage.xml'
-    failIfCoverageEmpty: true  
+    failIfCoverageEmpty: false  
 
 # build product and publish artifact
 - script: |
