--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:prod:tomcat": "ng build --prod --base-href /koia/",
-    "build:prod:apache": "ng build --prod",
+    "build:prod:tomcat": "ng build --configuration production --base-href /koia/",
+    "build:prod:apache": "ng build --configuration production",
     "test": "ng test --watch=true --sourceMap=true --browsers=ChromeHeadless --code-coverage=true",
     "test-debug": "ng test --browsers=ChromeDebug",
     "test-headless": "ng test --watch=true --sourceMap=true --browsers=ChromeHeadless",
@@ -22,18 +22,18 @@
   "private": true,
   "dependencies": {
     "@angular-slider/ngx-slider": "^2.0.3",
-    "@angular/animations": "^11.1.0",
+    "@angular/animations": "^12.2.16",
     "@angular/cdk": "^11.1.0",
-    "@angular/common": "^11.1.0",
-    "@angular/compiler": "^11.1.0",
-    "@angular/core": "^11.1.0",
+    "@angular/common": "^12.2.16",
+    "@angular/compiler": "^12.2.16",
+    "@angular/core": "^12.2.16",
     "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "^11.1.0",
+    "@angular/forms": "^12.2.16",
     "@angular/material": "^11.1.0",
-    "@angular/platform-browser": "^11.1.0",
-    "@angular/platform-browser-dynamic": "^11.1.0",
-    "@angular/platform-server": "^11.1.0",
-    "@angular/router": "^11.1.0",
+    "@angular/platform-browser": "^12.2.16",
+    "@angular/platform-browser-dynamic": "^12.2.16",
+    "@angular/platform-server": "^12.2.16",
+    "@angular/router": "^12.2.16",
     "@types/file-saver": "^2.0.0",
     "@types/pouchdb": "^6.4.0",
     "angular-resizable-element": "^3.3.4",
@@ -63,13 +63,13 @@
     "save-svg-as-png": "^1.4.17",
     "tslib": "^2.4.0",
     "xlsx": "^0.18.5",
-    "zone.js": "^0.11.5"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1101.1",
-    "@angular/cli": "^11.1.1",
-    "@angular/compiler-cli": "^11.1.0",
-    "@angular/localize": "^11.1.0",
+    "@angular-devkit/build-angular": "^12.2.17",
+    "@angular/cli": "^12.2.17",
+    "@angular/compiler-cli": "^12.2.16",
+    "@angular/localize": "^12.2.16",
     "@types/jasmine": "^3.6.3",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^14.14.22",
@@ -88,11 +88,11 @@
     "karma-jasmine-html-reporter": "^1.7.0",
     "karma-junit-reporter": "^2.0.1",
     "karma-spec-reporter": "0.0.32",
-    "ng-packagr": "^11.1.2",
+    "ng-packagr": "^12.2.7",
     "protractor": "~7.0.0",
     "puppeteer": "^3.3.0",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
-    "typescript": "^4.0.5"
+    "typescript": "^4.3.5"
   }
 }
