--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,13 +13,12 @@
       "node_modules/@types"
     ],
     "lib": [
-      "es2016",
+      "es2018",
       "dom"
     ],
     "module": "es2020"
   },
   "angularCompilerOptions": {
-    "fullTemplateTypeCheck": true,
-    "strictTemplates": true
+    "strictTemplates": false
   }
 }
