--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/platform-browser-dynamic": "^13.3.9",
     "@angular/platform-server": "^13.3.9",
     "@angular/router": "^13.3.9",
+    "@types/d3": "^7.1.0",
     "@types/file-saver": "^2.0.5",
     "@types/pouchdb": "^6.4.0",
     "angular-resizable-element": "^5.0.0",
@@ -42,7 +43,7 @@
     "chartjs-adapter-moment": "^1.0.0",
     "chartjs-plugin-datalabels": "^2.0.0",
     "core-js": "^3.22.5",
-    "d3": "^3.5.17",
+    "d3": "^7.4.4",
     "d3fc-sample": "^3.0.5",
     "data-forge": "^1.9.5",
     "extract-zip": "^2.0.1",
@@ -50,9 +51,7 @@
     "jquery": "^3.6.0",
     "jquery-ui-dist": "^1.13.1",
     "moment": "^2.29.3",
-    "ng2-nvd3": "^2.0.0",
     "npm": "^6.14.11",
-    "nvd3": "^1.8.6",
     "oboe": "^2.1.5",
     "papaparse": "^5.3.2",
     "pivottable": "^2.23.0",
