--- a/package.json
+++ b/package.json
@@ -16,81 +16,80 @@
     "test": "ng test --watch=true --sourceMap=true --browsers=ChromeHeadless --code-coverage=true",
     "test-debug": "ng test --browsers=ChromeDebug",
     "test-headless": "ng test --watch=true --sourceMap=true --browsers=ChromeHeadless",
-    "e2e": "ng e2e --webdriver-update=false --devServerTarget=''",
     "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
   },
   "private": true,
   "dependencies": {
-    "@angular-slider/ngx-slider": "^2.0.4",
-    "@angular/animations": "^13.3.11",
-    "@angular/cdk": "^13.3.8",
-    "@angular/common": "^13.3.11",
-    "@angular/compiler": "^13.3.11",
-    "@angular/core": "^13.3.11",
-    "@angular/flex-layout": "^13.0.0-beta.38",
-    "@angular/forms": "^13.3.11",
-    "@angular/material": "^13.3.8",
-    "@angular/platform-browser": "^13.3.11",
-    "@angular/platform-browser-dynamic": "^13.3.11",
-    "@angular/platform-server": "^13.3.10",
-    "@angular/router": "^13.3.11",
-    "@types/d3": "^7.4.0",
-    "@types/file-saver": "^2.0.5",
-    "@types/pouchdb": "^6.4.0",
-    "angular-resizable-element": "^5.0.0",
-    "c3": "^0.4.24",
-    "chart.js": "^3.8.0",
-    "chartjs-adapter-moment": "^1.0.0",
-    "chartjs-plugin-datalabels": "^2.0.0",
-    "core-js": "^3.22.8",
-    "d3": "^7.4.4",
-    "d3fc-sample": "^3.0.5",
-    "data-forge": "^1.9.5",
-    "extract-zip": "^2.0.1",
-    "file-saver": "^2.0.5",
-    "jquery": "^3.6.0",
-    "jquery-ui-dist": "^1.13.1",
-    "moment": "^2.29.3",
-    "oboe": "^2.1.5",
-    "papaparse": "^5.3.2",
-    "pivottable": "^2.23.0",
-    "pouchdb": "^7.3.0",
-    "pouchdb-find": "^7.3.0",
-    "rxjs": "^6.6.7",
-    "save": "^2.5.0",
-    "save-svg-as-png": "^1.4.17",
-    "tslib": "^2.4.0",
-    "xlsx": "^0.18.5",
+    "@angular-slider/ngx-slider": "~2.0.4",
+    "@angular/animations": "~13.3.11",
+    "@angular/cdk": "~13.3.8",
+    "@angular/common": "~13.3.11",
+    "@angular/compiler": "~13.3.11",
+    "@angular/core": "~13.3.11",
+    "@angular/flex-layout": "~13.0.0-beta.38",
+    "@angular/forms": "~13.3.11",
+    "@angular/material": "~13.3.8",
+    "@angular/platform-browser": "~13.3.11",
+    "@angular/platform-browser-dynamic": "~13.3.11",
+    "@angular/platform-server": "~13.3.10",
+    "@angular/router": "~13.3.11",
+    "@types/d3": "~7.4.0",
+    "@types/file-saver": "~2.0.5",
+    "@types/pouchdb": "~6.4.0",
+    "angular-resizable-element": "~5.0.0",
+    "c3": "~0.4.24",
+    "chart.js": "~3.8.0",
+    "chartjs-adapter-moment": "~1.0.0",
+    "chartjs-plugin-datalabels": "~2.0.0",
+    "core-js": "~3.22.8",
+    "d3": "~7.4.4",
+    "d3fc-sample": "~3.0.5",
+    "data-forge": "~1.9.5",
+    "extract-zip": "~2.0.1",
+    "file-saver": "~2.0.5",
+    "jquery": "~3.6.0",
+    "jquery-ui-dist": "~1.13.1",
+    "moment": "~2.29.3",
+    "oboe": "~2.1.5",
+    "papaparse": "~5.3.2",
+    "pivottable": "~2.23.0",
+    "pouchdb": "~7.3.0",
+    "pouchdb-find": "~7.3.0",
+    "rxjs": "~7.5.0",
+    "save": "~2.5.0",
+    "save-svg-as-png": "~1.4.17",
+    "tslib": "~2.4.0",
+    "xlsx": "~0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.7",
-    "@angular/cli": "^13.3.7",
-    "@angular/compiler-cli": "^13.3.11",
-    "@angular/localize": "^13.3.11",
-    "@types/jasmine": "^4.0.3",
-    "@types/jasminewd2": "^2.0.10",
-    "@types/node": "^14.18.20",
-    "codelyzer": "^6.0.2",
-    "copyfiles": "^2.4.1",
-    "cross-var": "^1.1.0",
-    "jasmine": "^4.1.0",
+    "@angular-devkit/build-angular": "~13.3.7",
+    "@angular/cli": "~13.3.7",
+    "@angular/compiler-cli": "~13.3.11",
+    "@angular/localize": "~13.3.11",
+    "@types/jasmine": "~4.0.3",
+    "@types/jasminewd2": "~2.0.10",
+    "@types/node": "~14.18.20",
+    "codelyzer": "~6.0.2",
+    "copyfiles": "~2.4.1",
+    "cross-var": "~1.1.0",
+    "jasmine": "~4.1.0",
     "jasmine-core": "~4.1.1",
-    "jasmine-spec-reporter": "^7.0.0",
-    "jasminewd2": "^2.2.0",
-    "karma": "^6.3.20",
+    "jasmine-spec-reporter": "~7.0.0",
+    "jasminewd2": "~2.2.0",
+    "karma": "~6.3.20",
     "karma-chrome-launcher": "~3.1.1",
-    "karma-cli": "^2.0.0",
+    "karma-cli": "~2.0.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.0.1",
-    "karma-jasmine-html-reporter": "^2.0.0",
-    "karma-junit-reporter": "^2.0.1",
-    "karma-spec-reporter": "0.0.34",
-    "ng-packagr": "^13.3.1",
-    "protractor": "~7.0.0",
-    "puppeteer": "^3.3.0",
-    "ts-node": "^9.1.1",
-    "tslint": "^6.1.3",
-    "typescript": "4.4.4"
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "karma-junit-reporter": "~2.0.1",
+    "karma-spec-reporter": "~0.0.34",
+    "lodash": "^4.17.21",
+    "ng-packagr": "~13.3.1",
+    "puppeteer": "~14.2.0",
+    "ts-node": "~9.1.1",
+    "tslint": "~6.1.3",
+    "typescript": "~4.6.2"
   }
 }
