try to recreate running build with unit tests

--- a/centeractive.koia.e2etest.yml
+++ b/centeractive.koia.e2etest.yml
@@ -3,20 +3,79 @@
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
-trigger:
-- master
+trigger: none
+
+schedules:
+- cron: "0 5 * * Mon-Fri"
+  displayName: M-F daily 5am build
+  branches:
+    include:
+    - master
+
+variables:
+  npm_config_cache: $(Pipeline.Workspace)/.npm
+  NODE_OPTIONS: --max_old_space_size=4096
 
 pool:
   vmImage: ubuntu-latest
 
 steps:
+
+- task: CacheBeta@0
+  inputs:
+    key: npm | $(Agent.OS) | package-lock.json
+    path: $(npm_config_cache)
+  displayName: cache npm packages
+
 - task: NodeTool@0
   inputs:
-    versionSpec: '10.x'
-  displayName: 'Install Node.js'
+    versionSpec: '16.x'
+  displayName: 'install Node.js'
 
 - script: |
-    npm install -g @angular/cli
-    npm install
-    ng build --prod
-  displayName: 'npm install and build'
+    npm ci -g @angular/cli@13.3.7
+    npm ci
+  displayName: 'install npm packages'
+
+# set-up and rund CouchDB in Docker container (used by unit tests)
+- task: DownloadSecureFile@1
+  displayName: 'download CouchDB local.ini file'
+  name: couchdb_local_ini
+  inputs:
+    secureFile: 'couchdb_local.ini'    
+
+- task: PowerShell@2
+  displayName: 'copy CouchDB local.ini to target directory'
+  inputs:
+    targetType: 'inline'
+    script: |
+      New-Item -Type Directory -Force "${HOME}/couchdb/etc/local.d"
+      Copy-Item -Force "$(couchdb_local_ini.secureFilePath)" "${HOME}/couchdb/etc/local.d/local.ini"    
+
+- task: DockerInstaller@0
+  displayName: install Docker
+  inputs:
+    dockerVersion: 17.09.0-ce
+    releaseType: stable
+    
+- script: |
+    docker run -p 5984:5984 --name couchdb -v ${HOME}/couchdb/etc/local.d:/opt/couchdb/etc/local.d -d couchdb:3.2.2
+  displayName: 'run CouchDB in Docker container'
+
+# perform unit-tets and publish test and code coverage results
+- script: |
+    npx ng test --watch=false --karmaConfig karma.conf.ci.js --code-coverage
+  displayName: 'perform unit tests'    
+
+# build product and publish artifact
+- script: |
+    npx ng build --prod
+  failOnStderr: false    
+  displayName: 'build koia product'
+
+- task: PublishPipelineArtifact@0  
+  inputs:
+    artifactName: 'koiadist'
+    targetPath: 'dist/koia'
+  enabled: false
+  displayName: 'publish artifact'
