initial Cypress version

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "chartjs-adapter-moment": "~1.0.0",
     "chartjs-plugin-datalabels": "~2.0.0",
     "core-js": "~3.22.8",
+    "cypress-get-table": "^1.0.1",
     "d3": "~7.4.4",
     "d3fc-sample": "~3.0.5",
     "data-forge": "~1.9.5",
@@ -73,6 +74,8 @@
     "codelyzer": "~6.0.2",
     "copyfiles": "~2.4.1",
     "cross-var": "~1.1.0",
+    "cypress": "^10.3.0",
+    "cypress-file-upload": "^5.0.8",
     "jasmine": "~4.1.0",
     "jasmine-core": "~4.1.1",
     "jasmine-spec-reporter": "~7.0.0",
