--- a/centeractive.koia.e2etest.yml
+++ b/centeractive.koia.e2etest.yml
@@ -67,7 +67,7 @@ steps:
   - task: PublishTestResults@2
     inputs:
       testResultsFormat: "JUnit"
-      testResultsFiles: "**/TEST-*.xml"
+      testResultsFiles: "**/TEST-*.*"
     enabled: true
     displayName: "publish Cypress tests"
 
