--- a/centeractive.koia.e2etest.yml
+++ b/centeractive.koia.e2etest.yml
@@ -67,7 +67,7 @@ steps:
   - task: PublishTestResults@2
     inputs:
       testResultsFormat: "JUnit"
-      testResultsFiles: "**/reports/junit/*.xml"
+      testResultsFiles: "**/reports/junit/*.*"
     enabled: true
     displayName: "publish Cypress tests"
 
