Update centeractive.koia.e2etest.yml for Azure Pipelines

--- a/centeractive.koia.e2etest.yml
+++ b/centeractive.koia.e2etest.yml
@@ -68,6 +68,7 @@ steps:
     inputs:
       testResultsFormat: "JUnit"
       testResultsFiles: "**/reports/junit/*.*"
+      mergeTestResults: true
     enabled: true
     displayName: "publish Cypress tests"
 
